--- a/WeatherApp/WeatherApp/Base.lproj/Main.storyboard
+++ b/WeatherApp/WeatherApp/Base.lproj/Main.storyboard
@@ -77,7 +77,7 @@
                                 </state>
                                 <connections>
                                     <action selector="addLocationAct:" destination="Vou-w0-Xb8" eventType="touchUpInside" id="Xlv-Oo-NTd"/>
-                                    <segue destination="kDM-xM-nwl" kind="unwind" unwindAction="unwinFromAddLocationWithSegue:" id="eDf-8G-eXD"/>
+                                    <segue destination="SVd-WO-iik" kind="unwind" unwindAction="unwinFromAddLocationWithSegue:" id="Nqm-XZ-OOL"/>
                                 </connections>
                             </button>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter location" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0fh-np-rtA" userLabel="Location Label">
@@ -194,7 +194,7 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rii-0n-vsP" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-                <exit id="kDM-xM-nwl" userLabel="Exit" sceneMemberID="exit"/>
+                <exit id="SVd-WO-iik" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="1000" y="-741"/>
         </scene>
